src/lib/orionld/betterq/QueryParser.cpp

// Generated from Query.g4 by ANTLR 4.9.2


#include "QueryListener.h"

#include "QueryParser.h"


using namespace antlrcpp;
using namespace antlr4;

QueryParser::QueryParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

QueryParser::~QueryParser() {
  delete _interpreter;
}

std::string QueryParser::getGrammarFileName() const {
  return "Query.g4";
}

const std::vector<std::string>& QueryParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& QueryParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- QueryContext ------------------------------------------------------------------

QueryParser::QueryContext::QueryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<QueryParser::QuerytermortermandassocContext *> QueryParser::QueryContext::querytermortermandassoc() {
  return getRuleContexts<QueryParser::QuerytermortermandassocContext>();
}

QueryParser::QuerytermortermandassocContext* QueryParser::QueryContext::querytermortermandassoc(size_t i) {
  return getRuleContext<QueryParser::QuerytermortermandassocContext>(i);
}

tree::TerminalNode* QueryParser::QueryContext::EOF() {
  return getToken(QueryParser::EOF, 0);
}

std::vector<QueryParser::OropContext *> QueryParser::QueryContext::orop() {
  return getRuleContexts<QueryParser::OropContext>();
}

QueryParser::OropContext* QueryParser::QueryContext::orop(size_t i) {
  return getRuleContext<QueryParser::OropContext>(i);
}


size_t QueryParser::QueryContext::getRuleIndex() const {
  return QueryParser::RuleQuery;
}

void QueryParser::QueryContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuery(this);
}

void QueryParser::QueryContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuery(this);
}

QueryParser::QueryContext* QueryParser::query() {
  QueryContext *_localctx = _tracker.createInstance<QueryContext>(_ctx, getState());
  enterRule(_localctx, 0, QueryParser::RuleQuery);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    querytermortermandassoc();
    setState(94);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == QueryParser::OROP) {
      setState(89);
      orop();
      setState(90);
      querytermortermandassoc();
      setState(96);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(97);
    match(QueryParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QuerytermortermandassocContext ------------------------------------------------------------------

QueryParser::QuerytermortermandassocContext::QuerytermortermandassocContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<QueryParser::QuerytermassocornotContext *> QueryParser::QuerytermortermandassocContext::querytermassocornot() {
  return getRuleContexts<QueryParser::QuerytermassocornotContext>();
}

QueryParser::QuerytermassocornotContext* QueryParser::QuerytermortermandassocContext::querytermassocornot(size_t i) {
  return getRuleContext<QueryParser::QuerytermassocornotContext>(i);
}

std::vector<QueryParser::AndopContext *> QueryParser::QuerytermortermandassocContext::andop() {
  return getRuleContexts<QueryParser::AndopContext>();
}

QueryParser::AndopContext* QueryParser::QuerytermortermandassocContext::andop(size_t i) {
  return getRuleContext<QueryParser::AndopContext>(i);
}


size_t QueryParser::QuerytermortermandassocContext::getRuleIndex() const {
  return QueryParser::RuleQuerytermortermandassoc;
}

void QueryParser::QuerytermortermandassocContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuerytermortermandassoc(this);
}

void QueryParser::QuerytermortermandassocContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuerytermortermandassoc(this);
}

QueryParser::QuerytermortermandassocContext* QueryParser::querytermortermandassoc() {
  QuerytermortermandassocContext *_localctx = _tracker.createInstance<QuerytermortermandassocContext>(_ctx, getState());
  enterRule(_localctx, 2, QueryParser::RuleQuerytermortermandassoc);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(99);
    querytermassocornot();
    setState(105);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == QueryParser::ANDOP) {
      setState(100);
      andop();
      setState(101);
      querytermassocornot();
      setState(107);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QuerytermassocornotContext ------------------------------------------------------------------

QueryParser::QuerytermassocornotContext::QuerytermassocornotContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

QueryParser::QuerytermassocContext* QueryParser::QuerytermassocornotContext::querytermassoc() {
  return getRuleContext<QueryParser::QuerytermassocContext>(0);
}

QueryParser::QuerytermContext* QueryParser::QuerytermassocornotContext::queryterm() {
  return getRuleContext<QueryParser::QuerytermContext>(0);
}


size_t QueryParser::QuerytermassocornotContext::getRuleIndex() const {
  return QueryParser::RuleQuerytermassocornot;
}

void QueryParser::QuerytermassocornotContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuerytermassocornot(this);
}

void QueryParser::QuerytermassocornotContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuerytermassocornot(this);
}

QueryParser::QuerytermassocornotContext* QueryParser::querytermassocornot() {
  QuerytermassocornotContext *_localctx = _tracker.createInstance<QuerytermassocornotContext>(_ctx, getState());
  enterRule(_localctx, 4, QueryParser::RuleQuerytermassocornot);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(110);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case QueryParser::OPENINGPAR: {
        enterOuterAlt(_localctx, 1);
        setState(108);
        querytermassoc();
        break;
      }

      case QueryParser::DOTTEDATTRNAME: {
        enterOuterAlt(_localctx, 2);
        setState(109);
        queryterm();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QuerytermassocContext ------------------------------------------------------------------

QueryParser::QuerytermassocContext::QuerytermassocContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

QueryParser::OpeningparContext* QueryParser::QuerytermassocContext::openingpar() {
  return getRuleContext<QueryParser::OpeningparContext>(0);
}

std::vector<QueryParser::QuerytermandassocContext *> QueryParser::QuerytermassocContext::querytermandassoc() {
  return getRuleContexts<QueryParser::QuerytermandassocContext>();
}

QueryParser::QuerytermandassocContext* QueryParser::QuerytermassocContext::querytermandassoc(size_t i) {
  return getRuleContext<QueryParser::QuerytermandassocContext>(i);
}

QueryParser::ClosingparContext* QueryParser::QuerytermassocContext::closingpar() {
  return getRuleContext<QueryParser::ClosingparContext>(0);
}

std::vector<QueryParser::OropContext *> QueryParser::QuerytermassocContext::orop() {
  return getRuleContexts<QueryParser::OropContext>();
}

QueryParser::OropContext* QueryParser::QuerytermassocContext::orop(size_t i) {
  return getRuleContext<QueryParser::OropContext>(i);
}


size_t QueryParser::QuerytermassocContext::getRuleIndex() const {
  return QueryParser::RuleQuerytermassoc;
}

void QueryParser::QuerytermassocContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuerytermassoc(this);
}

void QueryParser::QuerytermassocContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuerytermassoc(this);
}

QueryParser::QuerytermassocContext* QueryParser::querytermassoc() {
  QuerytermassocContext *_localctx = _tracker.createInstance<QuerytermassocContext>(_ctx, getState());
  enterRule(_localctx, 6, QueryParser::RuleQuerytermassoc);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(112);
    openingpar();
    setState(113);
    querytermandassoc();
    setState(119);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == QueryParser::OROP) {
      setState(114);
      orop();
      setState(115);
      querytermandassoc();
      setState(121);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(122);
    closingpar();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QuerytermandassocContext ------------------------------------------------------------------

QueryParser::QuerytermandassocContext::QuerytermandassocContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<QueryParser::QuerytermContext *> QueryParser::QuerytermandassocContext::queryterm() {
  return getRuleContexts<QueryParser::QuerytermContext>();
}

QueryParser::QuerytermContext* QueryParser::QuerytermandassocContext::queryterm(size_t i) {
  return getRuleContext<QueryParser::QuerytermContext>(i);
}

std::vector<QueryParser::AndopContext *> QueryParser::QuerytermandassocContext::andop() {
  return getRuleContexts<QueryParser::AndopContext>();
}

QueryParser::AndopContext* QueryParser::QuerytermandassocContext::andop(size_t i) {
  return getRuleContext<QueryParser::AndopContext>(i);
}


size_t QueryParser::QuerytermandassocContext::getRuleIndex() const {
  return QueryParser::RuleQuerytermandassoc;
}

void QueryParser::QuerytermandassocContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuerytermandassoc(this);
}

void QueryParser::QuerytermandassocContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuerytermandassoc(this);
}

QueryParser::QuerytermandassocContext* QueryParser::querytermandassoc() {
  QuerytermandassocContext *_localctx = _tracker.createInstance<QuerytermandassocContext>(_ctx, getState());
  enterRule(_localctx, 8, QueryParser::RuleQuerytermandassoc);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(124);
    queryterm();
    setState(130);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == QueryParser::ANDOP) {
      setState(125);
      andop();
      setState(126);
      queryterm();
      setState(132);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QuerytermContext ------------------------------------------------------------------

QueryParser::QuerytermContext::QuerytermContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

QueryParser::AttributeContext* QueryParser::QuerytermContext::attribute() {
  return getRuleContext<QueryParser::AttributeContext>(0);
}

QueryParser::QoperatorContext* QueryParser::QuerytermContext::qoperator() {
  return getRuleContext<QueryParser::QoperatorContext>(0);
}

QueryParser::ComparablevalueContext* QueryParser::QuerytermContext::comparablevalue() {
  return getRuleContext<QueryParser::ComparablevalueContext>(0);
}

QueryParser::EqualContext* QueryParser::QuerytermContext::equal() {
  return getRuleContext<QueryParser::EqualContext>(0);
}

QueryParser::CompequalityvalueContext* QueryParser::QuerytermContext::compequalityvalue() {
  return getRuleContext<QueryParser::CompequalityvalueContext>(0);
}

QueryParser::UnequalContext* QueryParser::QuerytermContext::unequal() {
  return getRuleContext<QueryParser::UnequalContext>(0);
}

QueryParser::PatternopContext* QueryParser::QuerytermContext::patternop() {
  return getRuleContext<QueryParser::PatternopContext>(0);
}

QueryParser::RegexContext* QueryParser::QuerytermContext::regex() {
  return getRuleContext<QueryParser::RegexContext>(0);
}

QueryParser::PatternnoopContext* QueryParser::QuerytermContext::patternnoop() {
  return getRuleContext<QueryParser::PatternnoopContext>(0);
}


size_t QueryParser::QuerytermContext::getRuleIndex() const {
  return QueryParser::RuleQueryterm;
}

void QueryParser::QuerytermContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQueryterm(this);
}

void QueryParser::QuerytermContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQueryterm(this);
}

QueryParser::QuerytermContext* QueryParser::queryterm() {
  QuerytermContext *_localctx = _tracker.createInstance<QuerytermContext>(_ctx, getState());
  enterRule(_localctx, 10, QueryParser::RuleQueryterm);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(154);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(133);
      attribute();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(134);
      attribute();
      setState(135);
      qoperator();
      setState(136);
      comparablevalue();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(138);
      attribute();
      setState(139);
      equal();
      setState(140);
      compequalityvalue();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(142);
      attribute();
      setState(143);
      unequal();
      setState(144);
      compequalityvalue();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(146);
      attribute();
      setState(147);
      patternop();
      setState(148);
      regex();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(150);
      attribute();
      setState(151);
      patternnoop();
      setState(152);
      regex();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DottedpathContext ------------------------------------------------------------------

QueryParser::DottedpathContext::DottedpathContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* QueryParser::DottedpathContext::DOTTEDATTRNAME() {
  return getToken(QueryParser::DOTTEDATTRNAME, 0);
}


size_t QueryParser::DottedpathContext::getRuleIndex() const {
  return QueryParser::RuleDottedpath;
}

void QueryParser::DottedpathContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDottedpath(this);
}

void QueryParser::DottedpathContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDottedpath(this);
}

QueryParser::DottedpathContext* QueryParser::dottedpath() {
  DottedpathContext *_localctx = _tracker.createInstance<DottedpathContext>(_ctx, getState());
  enterRule(_localctx, 12, QueryParser::RuleDottedpath);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(156);
    match(QueryParser::DOTTEDATTRNAME);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AttributeContext ------------------------------------------------------------------

QueryParser::AttributeContext::AttributeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<QueryParser::DottedpathContext *> QueryParser::AttributeContext::dottedpath() {
  return getRuleContexts<QueryParser::DottedpathContext>();
}

QueryParser::DottedpathContext* QueryParser::AttributeContext::dottedpath(size_t i) {
  return getRuleContext<QueryParser::DottedpathContext>(i);
}


size_t QueryParser::AttributeContext::getRuleIndex() const {
  return QueryParser::RuleAttribute;
}

void QueryParser::AttributeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAttribute(this);
}

void QueryParser::AttributeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAttribute(this);
}

QueryParser::AttributeContext* QueryParser::attribute() {
  AttributeContext *_localctx = _tracker.createInstance<AttributeContext>(_ctx, getState());
  enterRule(_localctx, 14, QueryParser::RuleAttribute);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(158);
    dottedpath();
    setState(163);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == QueryParser::T__0) {
      setState(159);
      match(QueryParser::T__0);
      setState(160);
      dottedpath();
      setState(161);
      match(QueryParser::T__1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QoperatorContext ------------------------------------------------------------------

QueryParser::QoperatorContext::QoperatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

QueryParser::EqualContext* QueryParser::QoperatorContext::equal() {
  return getRuleContext<QueryParser::EqualContext>(0);
}

QueryParser::UnequalContext* QueryParser::QoperatorContext::unequal() {
  return getRuleContext<QueryParser::UnequalContext>(0);
}

QueryParser::GreatereqContext* QueryParser::QoperatorContext::greatereq() {
  return getRuleContext<QueryParser::GreatereqContext>(0);
}

QueryParser::GreaterContext* QueryParser::QoperatorContext::greater() {
  return getRuleContext<QueryParser::GreaterContext>(0);
}

QueryParser::LessContext* QueryParser::QoperatorContext::less() {
  return getRuleContext<QueryParser::LessContext>(0);
}

QueryParser::LesseqContext* QueryParser::QoperatorContext::lesseq() {
  return getRuleContext<QueryParser::LesseqContext>(0);
}


size_t QueryParser::QoperatorContext::getRuleIndex() const {
  return QueryParser::RuleQoperator;
}

void QueryParser::QoperatorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQoperator(this);
}

void QueryParser::QoperatorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQoperator(this);
}

QueryParser::QoperatorContext* QueryParser::qoperator() {
  QoperatorContext *_localctx = _tracker.createInstance<QoperatorContext>(_ctx, getState());
  enterRule(_localctx, 16, QueryParser::RuleQoperator);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(171);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case QueryParser::EQUAL: {
        enterOuterAlt(_localctx, 1);
        setState(165);
        equal();
        break;
      }

      case QueryParser::UNEQUAL: {
        enterOuterAlt(_localctx, 2);
        setState(166);
        unequal();
        break;
      }

      case QueryParser::GREATEREQ: {
        enterOuterAlt(_localctx, 3);
        setState(167);
        greatereq();
        break;
      }

      case QueryParser::GREATER: {
        enterOuterAlt(_localctx, 4);
        setState(168);
        greater();
        break;
      }

      case QueryParser::LESS: {
        enterOuterAlt(_localctx, 5);
        setState(169);
        less();
        break;
      }

      case QueryParser::LESSEQ: {
        enterOuterAlt(_localctx, 6);
        setState(170);
        lesseq();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PatternopContext ------------------------------------------------------------------

QueryParser::PatternopContext::PatternopContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* QueryParser::PatternopContext::PATTERNOP() {
  return getToken(QueryParser::PATTERNOP, 0);
}


size_t QueryParser::PatternopContext::getRuleIndex() const {
  return QueryParser::RulePatternop;
}

void QueryParser::PatternopContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPatternop(this);
}

void QueryParser::PatternopContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPatternop(this);
}

QueryParser::PatternopContext* QueryParser::patternop() {
  PatternopContext *_localctx = _tracker.createInstance<PatternopContext>(_ctx, getState());
  enterRule(_localctx, 18, QueryParser::RulePatternop);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(173);
    match(QueryParser::PATTERNOP);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PatternnoopContext ------------------------------------------------------------------

QueryParser::PatternnoopContext::PatternnoopContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* QueryParser::PatternnoopContext::PATTERNNOOP() {
  return getToken(QueryParser::PATTERNNOOP, 0);
}


size_t QueryParser::PatternnoopContext::getRuleIndex() const {
  return QueryParser::RulePatternnoop;
}

void QueryParser::PatternnoopContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPatternnoop(this);
}

void QueryParser::PatternnoopContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPatternnoop(this);
}

QueryParser::PatternnoopContext* QueryParser::patternnoop() {
  PatternnoopContext *_localctx = _tracker.createInstance<PatternnoopContext>(_ctx, getState());
  enterRule(_localctx, 20, QueryParser::RulePatternnoop);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(175);
    match(QueryParser::PATTERNNOOP);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GreatereqContext ------------------------------------------------------------------

QueryParser::GreatereqContext::GreatereqContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* QueryParser::GreatereqContext::GREATEREQ() {
  return getToken(QueryParser::GREATEREQ, 0);
}


size_t QueryParser::GreatereqContext::getRuleIndex() const {
  return QueryParser::RuleGreatereq;
}

void QueryParser::GreatereqContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<QueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGreatereq(this);
}
